# Elpis

./: CMakeLists.txt  README.md  conanfile.txt  update_directory.cmake
include/: Camera.h  Core.h  CubeMap.h  Entity.h  Light.h  MaterialManager.h  Mesh.h  MeshLoader.h  Renderer.h  Scene.h  Shader.h  Texture.h
nut/: NutApp.cpp  NutLayer.cpp  NutLayer.h
res/shaders/: BRDF.shader  Background.shader  Basic.shader  CubeMap.shader  Irradiance.shader  PBR.shader  PreFilter.shader
src/: Camera.cpp  CubeMap.cpp  Entity.cpp  MaterialManager.cpp  Mesh.cpp  MeshLoader.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  elpch.h
src/Elpis/Core/: App.cpp  Elpis.cpp  FileDialog.cpp  InterfaceLayer.cpp  Log.cpp  Window.cpp  main.cpp
src/Elpis/Include/: App.h  ApplicationEvent.h  Camera.h  Core.h  CubeMap.h  Entity.h  Event.h  FileDialog.h  Framebuffer.h  GraphicsContext.h  InterfaceLayer.h  KeyCodes.h  KeyEvent.h  Layer.h  Light.h  Log.h  MaterialManager.h  Mesh.h  MeshLoader.h  MouseCodes.h  MouseEvent.h  PlatformDetection.h  Renderer.h  RendererAPI.h  Scene.h  Shader.h  Texture.h  Timestep.h  Window.h
src/Elpis/Renderer/: CubeMap.cpp  Framebuffer.cpp  GraphicsContext.cpp  MaterialManager.cpp  Mesh.cpp  MeshLoader.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp
src/Elpis/Scene/: Camera.cpp  Entity.cpp  Scene.cpp
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
src/Platform/Windows/: WindowsFileDialog.cpp  WindowsFileDialog.h  WindowsWindow.cpp  WindowsWindow.h
